<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_corner"
    android:backgroundTint="@color/white"
    android:padding="30dp"
    >

    <ImageView
        android:id="@+id/product_image"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/product_image_description"
        android:src="@drawable/car"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_brand"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_image" />

    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/product_brand"
        app:layout_constraintLeft_toLeftOf="parent"
 />

    <TextView
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_price"
        android:textColor="@color/black"
        android:textSize="26sp"

        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_brand"
/>

</androidx.constraintlayout.widget.ConstraintLayout>