<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".views.PaymentActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="pro.seinksansdoozebank.app512.util.ToolBarFragment"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:layout_gravity="center"
        android:paddingHorizontal="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_rounded_corner"
            android:backgroundTint="@color/grey"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prenom"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:textColor="@color/black"
                android:paddingHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_rounded_corner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/nom"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:textColor="@color/black"
                android:paddingHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_rounded_corner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/date_livraison"
                android:textColor="@color/black"
                android:textSize="25sp"

                />

            <Button
                android:id="@+id/datePickerButton"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:background="@drawable/bg_rounded_corner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/cb"
                android:textColor="@color/black"
                android:textSize="25sp"

                />

            <EditText
                android:id="@+id/cardNumber"
                android:layout_width="300dp"
                android:textColor="@color/black"

                android:paddingHorizontal="20dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_rounded_corner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cvv"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/cvv"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:textColor="@color/black"
                android:paddingHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_rounded_corner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_expiration"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/expirationDate"
                android:layout_width="300dp"
                android:paddingHorizontal="20dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:background="@drawable/bg_rounded_corner" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    <Button
        android:id="@+id/buy_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bg_rounded_corner"
        android:backgroundTint="@color/blue"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/buy_button_text"
        android:textSize="30sp" />
</LinearLayout>
